2004-12-07  Per Bothner  <per@bothner.com>

	* configure.in:  Set version to 1.7.91.
	* build.xml (version.release):  Set to 1.7.91.

2004-12-02  Per Bothner  <per@bothner.com>

	* kawa/standard/force.java: Converted to Scheme and removed.
	* kawa/standard/make_future.java: Likewise.
	* kawa/standard/Makefile.am: Update accordingly.
	* kawa/standard/Scheme.java: Update accordingly.
	Also use defProcStFld for 'as' and 'throw'.

2004-11-16  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (defSntxStFld): New method.
	(initScheme): Replace many uses of define_syntax by defSntxStFld.

	* kawa/standard/throw_name.java (throwName): New static field.
	* kawa/standard/call_with_values.java (callWithvalues): Likewise.
	* kawa/standard/Scheme.java (initScheme): Replace most define_field
	calls by defprocStFld, and the rest by define_syntax, Also replace
	many define_proc by defProcStFld.

2004-11-15  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxTemplate.java: Change "opcode" of template_program
	from 2 bits to 3 bits.  Rearrange them some.
	(BUILD_VAR_CAR): New opcode.
	(pattern_nesting): Rename to patternNesting. Low-order bit encodes
	if match is car of saved Pair.
	(get_var, execute_car): New helper methods.
	* kawa/lang/PatternScope.java (pattern_nesting): Renamed likewise.
	* kawa/lang/SyntaxPattern.java (MATCH_ANY_CAR): New opcode.
	(translate): Take a "context" parameter so we can tell when to
	emit MATCH_ANY_CAR.
	(match_car): New function.
	(disassemble, match): Handle MATCH_ANY_CAR.
	* kawa/lang/SyntaxRules.java: Updated for renamed pattern_nesting.

	* kawa/lang/Lambda.java (rewrite): Use Translator.setLine method.

	* kawa/lang/Macro.java (expand): If result is not PairWithPosition,
	copy position from input form.

	* kawa/lang/Translator.java (setLine): New static convenience method.
	* kawa/standard/define.java (scanForm): Use it.

	* kawa/standard/syntax_case.java: Remove unused local.

2004-11-14  Per Bothner  <per@bothner.com>
	