@@ -1,5 +1,8 @@
 2004-12-07  Per Bothner  <per@bothner.com>
 
+	* Makefile.am (EXTRA_DIST): Don't include old makekawa.bat.
+	* acinclude.m4: Remove unused LIBGCJ_CONFIGURE rule.
+
 	* configure.in:  Set version to 1.7.91.
 	* build.xml (version.release):  Set to 1.7.91.
 
@@ -149,7 +152,7 @@
 	generailize to also look for JAVA5 and JAXP conditionals.
 	(selected-java-source, select-java5, dist-hook): New rules.
 	
-	* Makefile.am (makekawa.bar): Remove bit-rotted rule.
+	* Makefile.am (makekawa.bat): Remove bit-rotted rule.
 
 2004-10-27  Per Bothner  <per@bothner.com>
 
